# ekf_optitrack

./: CMakeLists.txt  LICENSE  README.md  package.xml
data/: group_0_exp_0_1710846560.txt  group_0_exp_0_1710846638.txt  group_0_exp_1_1710846750.txt  group_0_exp_1_1710847647.txt  group_0_exp_2_1710845556.txt  group_0_exp_2_1710845661.txt  group_0_exp_2_1710846022.txt  group_0_exp_2_1710846115.txt  group_0_exp_2_1710846143.txt  group_0_exp_2_1710846314.txt  group_0_exp_2_1710846855.txt  group_1_exp_0_1710847706.txt  group_1_exp_0_1710847804.txt  group_1_exp_0_1710847838.txt  group_1_exp_1_1710847940.txt  group_1_exp_2_1710848018.txt  group_2_exp_0_1710848366.txt  group_2_exp_0_1710848413.txt  group_2_exp_1_1710848495.txt  group_2_exp_1_1710848804.txt  group_2_exp_2_1710848610.txt  group_3_exp_0_1710849442.txt  group_3_exp_1_1710849556.txt  group_3_exp_1_1710849672.txt  group_3_exp_1_1710849739.txt  group_3_exp_2_1710849824.txt  group_4_exp_0_1710849970.txt  group_4_exp_1_1710850123.txt  group_4_exp_2_1710850215.txt  group_4_exp_2_1710850319.txt  group_5_exp_0_1710851616.txt  group_5_exp_0_1710851664.txt  group_5_exp_0_1710851719.txt  group_5_exp_1_1710851820.txt  group_5_exp_1_1710851905.txt  group_5_exp_1_1710851994.txt  group_5_exp_1_1710852095.txt  group_5_exp_1_1710852162.txt  group_5_exp_2_1710852268.txt  group_6_exp_0_1710946109.txt  (+19 more)
include/: ekf.h  exp_manager.h
launch/: ekf.launch  exp_manager.launch
msg/: PoseVel.msg  PoseVelArray.msg
src/: ekf.cpp  exp_manager.cpp
